--- a/style.css
+++ b/style.css
@@ -91,7 +91,7 @@ header > div > span {
     justify-content: center;
     width: 100%;
     height: 100vh;
-    background-image: url(/images/bg4.png);
+    background-image: url(images/bg4.png);
     background-repeat: no-repeat;
     background-position: center;
     background-size: 100%;
@@ -227,7 +227,7 @@ a:hover, a:active {
 
 @media screen and (min-width: 1200px) {
     body {
-        background-image: url(/images/bg4.png);
+        background-image: url(images/bg4.png);
         background-repeat: no-repeat;
         background-position: center;
         background-size: 90%;
