--- a/style.css
+++ b/style.css
@@ -45,7 +45,7 @@ p {
 }
 
 .skills_box, .cert_box, .my_proj_box {
-    width: calc(100% - 2rem);
+    /* width: calc(100% - 2rem); */
     margin: 1.5rem 0;
     padding: 1.5rem;
     border-radius: 1.5rem;
