--- a/style.css
+++ b/style.css
@@ -44,14 +44,6 @@ p {
     width: 2rem;
 }
 
-.skills_box, .cert_box, .my_proj_box {
-    margin: 1.5rem 0;
-    padding: 1.5rem;
-    border-radius: 1.5rem;
-    background-color: #2c2d301e;
-    box-shadow: 0px 0px 22px 6px rgba(0, 0, 0, 0.2);
-}
-
 header {
     position: fixed;
     top: 0;
@@ -94,10 +86,10 @@ header > div > span {
     justify-content: center;
     width: 100%;
     height: 100vh;
-    background-image: url(images/bg4.png);
+    background-image: url(images/bg1.png);
     background-repeat: no-repeat;
     background-position: center;
-    background-size: 100%;
+    background-size: 110%;
 }
 
 .home_text {
@@ -109,6 +101,14 @@ header > div > span {
 .home_text > p {
     font-weight: 200;
     letter-spacing: 1px;
+}
+
+.skills_box, .cert_box, .my_proj_box {
+    margin: 1.5rem 0;
+    padding: 1.5rem;
+    border-radius: 1.5rem;
+    background-color: #2c2d301e;
+    box-shadow: 0px 0px 22px 6px rgba(0, 0, 0, 0.2);
 }
 
 .skills_box_container {
@@ -145,33 +145,10 @@ header > div > span {
     margin: 3rem 0;
 }
 
-.cert_box {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: max-content;
-}
-
 .cert_box > span {
     position: absolute;
     bottom: 15%;
     right: 6%;
-}
-
-.cert_img_container {
-    display: flex;
-    align-items: center;
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    z-index: 10;
-}
-
-.certificate_udemy, .certificate_freeCodeCamp {
-    display: none;
-    width: 100%;
 }
 
 #my_projects {
@@ -185,7 +162,6 @@ header > div > span {
 }
 
 .proj_img_container {
-    position: relative;
     display: flex;
     gap: 1.5rem;
     flex-direction: column;
@@ -309,6 +285,7 @@ a:active {
     #hero {
         height: 100vh;
         background-size: 65%;
+        background-image: none;
     }
 
     .home_text {
